--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
       "host": "192.168.1.121",
       "port": "3333"
     }
-   },
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "nuxt": "^1.0.0",
     "@nuxtjs/axios": "^5.0.0"
   },
   "devDependencies": {
-    "cross-env": "^5.0.1"
+    "cross-env": "^5.0.1",
+    "push-dir": "^0.4.1"
   }
 }
