--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "devDependencies": {
     "cross-env": "^5.0.1",
-    "push-dir": "^0.4.1"
+    "node-sass": "^4.9.2",
+    "push-dir": "^0.4.1",
+    "sass-loader": "^7.0.3"
   }
 }
